# Ming3D

./: .editorconfig  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.txt  CMakeLists.txt  DebugLog.txt  DownloadLibs.bat  DownloadLibs.py  README.md  aptget.sh  conanfile-win.txt  conanfile.txt
Core/: CMakeLists.txt
Core/Source/: CoreTest.cpp  CoreTest.h  graphics_data.h  texture_info.h
Core/Source/Debug/: debug.cpp  debug.h  debug_stats.cpp  debug_stats.h  st_assert.h
Core/Source/Object/: class.cpp  class.h  function.cpp  function.h  function_reflection.h  game_object.cpp  game_object.h  objdefs.h  object.cpp  object.h  object_ptr.h  object_ref_handle.cpp  object_ref_handle.h  property.cpp  property.h  property_reflection.h
Core/Source/Serialisation/: data_serialisation.h  data_writer.cpp  data_writer.h  i_serialisable.h
Editor/: CMakeLists.txt
Editor/Resources/: editor.widget
Editor/Source/: editor.cpp  editor.h  editor_menu_bar_widget.cpp  editor_menu_bar_widget.h  editor_window.cpp  editor_window.h  main.cpp  property_inspector.cpp  property_inspector.h  property_inspector_builder.cpp  property_inspector_builder.h  property_inspector_widget.cpp  property_inspector_widget.h  scene_hierarchy_view.cpp  scene_hierarchy_widget.cpp  scene_hierarchy_widget.h  scene_view.cpp  scene_view.h  scene_view_widget.cpp  scene_view_widget.h  widget_layout_builder.cpp  widget_layout_builder.h  window_layout_builder.cpp  window_layout_builder.h
EditorOld/: CMakeLists.txt
EditorOld/Source/: editor.cpp  editor_window.cpp  editor_window.h  main.cpp  property_inspector.cpp  scene_hierarchy_view.h  scene_view.cpp  scene_view.h  window_layout_builder.h
Engine/: CMakeLists.txt
Engine/Resources/: ACKNOWLEDGEMENTS - credits.txt  Mvr_PetCow_walk.dae
Engine/Resources/Fonts/: FreeSans-license.txt
Engine/Resources/Shaders/: debuggraphics.cgp  defaultshader.cgp  gui.cgp  shadows.cgh
Engine/Source/Actors/: actor.cpp  actor.h  transform.cpp  transform.h
Engine/Source/ClassManager/: class_manager.cpp  class_manager.h
Engine/Source/Components/: box_collider_component.cpp  box_collider_component.h  camera_component.cpp  camera_component.h  collider_component.cpp  collider_component.h  component.cpp  component.h  component_callback_types.h  light_component.cpp  light_component.h  mesh_component.cpp  mesh_component.h  rigidbody_component.cpp  rigidbody_component.h  widget_component.cpp  widget_component.h
Engine/Source/Debug/: debug_graphics.cpp  debug_graphics.h
Engine/Source/GUI/: button_widget.cpp  button_widget.h  font_face.cpp  font_face.h  font_helper.cpp  font_helper.h  font_manager.cpp  font_manager.h  gui_input_manager.cpp  gui_input_manager.h  gui_resource_manager.cpp  gui_resource_manager.h  gui_vertex_data.h  image_visual.cpp  image_visual.h  image_widget.cpp  image_widget.h  menu_bar_widget.cpp  menu_bar_widget.h  text_input_widget.cpp  text_input_widget.h  text_properties.h  text_visual.cpp  text_visual.h  text_widget.cpp  text_widget.h  tree_view_item_widget.cpp  tree_view_item_widget.h  tree_view_widget.cpp  tree_view_widget.h  visual.h  widget.cpp  widget.h  widget_loader.cpp  widget_loader.h  widget_render_object.cpp  widget_render_object.h  widget_transform.cpp  widget_transform.h  widget_tree.cpp  (+2 more)
Engine/Source/GameEngine/: game_engine.cpp  game_engine.h
Engine/Source/Input/: input_event.h  input_handler.h  input_handler_sdl.cpp  input_handler_sdl.h  input_handler_win32.cpp  input_handler_win32.h  input_manager.cpp  input_manager.h  keycodes.h
Engine/Source/Light/: light_source.cpp  light_source.h  light_type.h  shadow_type.h
Engine/Source/Model/: material.cpp  material.h  material_buffer.cpp  material_buffer.h  material_factory.cpp  material_factory.h  mesh.cpp  mesh.h  mesh_buffer.h  mesh_data.h  model_helper.cpp  model_helper.h  primitive_factory.cpp  primitive_factory.h  shader_uniform_data.h  vertex.h
Engine/Source/Networking/: game_network.cpp  game_network.h  net_target.h  network_manager.cpp  network_manager.h
Engine/Source/Physics/: dynamic_physics_actor.cpp  dynamic_physics_actor.h  force_mode.h  physics_actor.cpp  physics_actor.h  physics_manager.cpp  physics_manager.h  physics_scene.cpp  physics_scene.h  physx_conversions.h  static_physics_actor.cpp  static_physics_actor.h
Engine/Source/Platform/: platform.h  platform_file.h  platform_file_linux.cpp  platform_file_linux.h  platform_file_win32.cpp  platform_file_win32.h  platform_interface.h  platform_interface_linux.cpp  platform_interface_linux.h  platform_interface_win32.cpp  platform_linux.cpp  (+4 more)
Rendering/: CMakeLists.txt
Rendering/Source/: basic_sample.cpp  basic_sample.h  blend_state.h  blend_state_d3d11.cpp  blend_state_d3d11.h  blend_state_gl.cpp  blend_state_gl.h  buffer_common.h  constant_buffer.cpp  constant_buffer.h  constant_buffer_d3d11.cpp  constant_buffer_d3d11.h  constant_buffer_data.cpp  constant_buffer_data.h  constant_buffer_gl.cpp  constant_buffer_gl.h  depth_stencil_state.cpp  depth_stencil_state.h  depth_stencil_state_d3d11.cpp  depth_stencil_state_d3d11.h  depth_stencil_state_gl.cpp  depth_stencil_state_gl.h  depth_stencil_view.cpp  depth_stencil_view.h  depth_stencil_view_d3d11.cpp  depth_stencil_view_d3d11.h  depth_stencil_view_gl.cpp  depth_stencil_view_gl.h  graphics_data.cpp  graphics_data.h  index_buffer.cpp  index_buffer.h  index_buffer_d3d11.cpp  index_buffer_d3d11.h  index_buffer_gl.cpp  index_buffer_gl.h  rasteriser_state.cpp  rasteriser_state.h  rasteriser_state_d3d11.cpp  rasteriser_state_d3d11.h  (+82 more)
Runtime/: CMakeLists.txt
Runtime/Source/: main.cpp
Samples/: CMakeLists.txt
Samples/Resources/: .gui_test.widget.swp  ACKNOWLEDGEMENTS.txt  gui_test.widget  menu_test.widget
Samples/Source/: core_main.cpp  game_network_main.cpp  gui_main.cpp  multi_window.cpp  physics_main.cpp  rpc_main.cpp  test_actor.cpp  test_actor.h
Tests/: CMakeLists.txt
Tests/Source/: core_main.cpp  game_network_main.cpp  physics_main.cpp  rendering_main.cpp  replication_main.cpp  socket_main.cpp  test_actor.cpp  test_actor.h
Viewer/: CMakeLists.txt
Viewer/Source/: main.cpp
(+102 files in other folders)
